[package]
name = "story-teller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serenity = "0.11.5"
tokio = { version = "1.24.2", features = ["macros", "rt-multi-thread", "time"] }
rusqlite = { version = "0.28.0", features = ["bundled"] }
anyhow = "1.0.68"
uuid = { version = "1.2.2", features = ["v4"] }
twee-v3 = "0.1.2"
toml = "0.6.0"
reqwest = "0.11.14"
